# Mini-LLM

./: .env.example  .gitignore  README.md  README_en.md  datasets.py  pretrain.py  pyproject.toml  requirements.txt  run_model.py  sft.py  show_model_size.py  some_demo.ipynb  test.py  train_tokenizer.py
architecture_lab/: start.ps1  start.sh
architecture_lab/backend/: experiment_store.py  gpu_monitor.py  main.py  model_builder.py  trainer.py
architecture_lab/backend/dataset/: dataset.py
architecture_lab/backend/tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
architecture_lab/frontend/: index.html  package-lock.json  package.json  vite.config.ts
architecture_lab/frontend/src/: App.vue  style.css  types.ts
architecture_lab/frontend/src/api/: index.test.mjs  index.ts
architecture_lab/frontend/src/components/: ComparePanel.vue  ExperimentDetailPanel.vue  GlobalParams.vue  GpuMonitor.vue  LayerConfig.vue  LossChart.vue  ModelSummary.vue  TrainPanel.vue  (+6 more)
data_loader/: __init__.py  dpo_dataset.py  grpo_dataset.py  sft_dataset.py
eval/: eval_dpo.ipynb  eval_flash_attention.ipynb  eval_grpo.ipynb  eval_yarn.py
example/: sft_dataset_visualization.ipynb  test_api.py  test_terminal.py  tokenizer_example.ipynb  use_example.ipynb
mini_models/: __init__.py  attention.py  base_module.py  cache.py  rope.py
mini_models/attention/: __init__.py  csa_hca.py  gated_attention.py  gated_delta_net.py  mla.py  standard_attention.py
mini_models/mini_deepseekv3/: configuration_mini_deepseekv3.py  modeling_mini_deepseekv3.py
mini_models/mini_deepseekv4/: modeling_mini_deepseekv4.py
mini_models/mini_llama3/: configuration_mini_llama3.py  modeling_mini_llama3.py
mini_models/mini_qwen3_next/: configuration_mini_qwen3_next.py  modeling_mini_qwen3_next.py
mini_tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
model/: __init__.py  basemodel.py  deepseekv3.py  llama3.py
preprocess_data/: download_pretrain_data.sh  download_sft_data.sh  download_tokenizer_data.sh  preprocess_data.py
scripts/: download_data.ps1  download_data.sh  prepare_architecture_lab_data.py  prepare_dpo_data.py  prepare_grpo_data.py  prepare_pretrain_data.py  prepare_sft_data.py  prepare_tokenizer_data.py  setup.ps1  setup.sh  upload_dataset.py  upload_weights.py
train/: dpo.py  grpo.py  pretrain.py  sft.py  utils.py  yarn.py
utils/: little_tools.py
(+3 files in other folders)
